package cn.tunyl.lawofdemeter;

public class Fans {
    private String name;

    public String getName() {
        return name;
    }

    public Fans(String name) {
        this.name = name;
    }
}
